feat: Implement pagination for category retrieval (coderabbitai suggestion)